...
        android:layout_height="296dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dog" />

    <Button
        android:id="@+id/Messaging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
...
